fix: update alignment of home item class on index page to keep centered

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -217,6 +217,8 @@ h2 {
     text-align: center;
     padding: 1rem;
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .home-item img {
